JumpScript/tests/baselines/reference/superCallFromClassThatHasNoBaseType1.errors.txt
tests/cases/compiler/superCallFromClassThatHasNoBaseType1.jump(8,21): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/compiler/superCallFromClassThatHasNoBaseType1.jump (1 errors) ====
    class A {
        constructor(private map: (value: number) => string) {
    
        }
    }
    
    class B {
        constructor() { super(value => String(value)); }
                        ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
    }